Prep projects for new file headers.
The inception year for the sub-projects has been updated to match the
start years in the original copyrights. The license plugin has been
changed to update file headers instead of just checking them, and the same
set of includes/excludes from the previous checkstyle process are
maintained.

Signed-off-by: Jeff Moroski <jmoroski@vmware.com>

--- a/bindings/java/api-bindings/pom.xml
+++ b/bindings/java/api-bindings/pom.xml
@@ -20,6 +20,7 @@
     <unpacked.schema.dir>${project.build.directory}/rest-api-schemas</unpacked.schema.dir>
     <unpacked.openapi.schema.dir>${project.build.directory}/openapi-schemas</unpacked.openapi.schema.dir>
   </properties>
+  <inceptionYear>2013</inceptionYear>
   <dependencies>
     <dependency>
       <groupId>com.vmware.vcloud</groupId>
