Enable checking for license header on CI builds.
Enable failure on license check, and share includes, excludes, license
info with update plugin.

Signed-off-by: Jeff Moroski <jmoroski@vmware.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
 language: java
 before_install:
-  - mvn license:check-file-header -Dlicense.licenseName=bsd_2
+  - mvn license:check-file-header -Dlicense.failOnNotUptodateHeader=true -Dlicense.failOnMissingHeader=true
