Enable proper file header checking in CI builds. (#2)
* Enable checking for license header on CI builds.

Enable failure on license check, and share includes, excludes, license
info with update plugin.

* Replace file headers in Java and XML-ish files.

All of the old headers have been replaced with the license-maven-plugin
style of file header and management.

* Prep projects for new file headers.

The inception year for the sub-projects has been updated to match the
start years in the original copyrights. The license plugin has been
changed to update file headers instead of just checking them, and the same
set of includes/excludes from the previous checkstyle process are
maintained.

Signed-off-by: Jeff Moroski <jmoroski@vmware.com>

--- a/pom.xml
+++ b/pom.xml
@@ -178,20 +178,20 @@
         <version>1.16</version>
         <configuration>
           <verbose>false</verbose>
+          <licenseName>bsd_2</licenseName>
+          <extraExtensions>
+            <xsd>xml</xsd>
+          </extraExtensions>
+          <includes>**/pom.xml,**/*.java,**/*.xml,**/*.xsd</includes>
+          <excludes>**/target/**/*,**/external/xml.xsd,**/ovf1.1/dsp8027_1.1.0.xsd,**/ovf1.1/dsp8023_1.1.0.xsd,**/ovf1.1/common.xsd,**/CIM_ResourceAllocationSettingData.xsd,**/CIM_VirtualSystemSettingData.xsd</excludes>
         </configuration>
         <executions>
           <execution>
             <id>update-file-headers</id>
             <goals>
-              <goal>check-file-header</goal>
+              <goal>update-file-header</goal>
             </goals>
             <phase>process-sources</phase>
-            <configuration>
-              <licenseName>bsd_2</licenseName>
-              <roots>
-                <root>src</root>
-              </roots>
-            </configuration>
           </execution>
         </executions>
       </plugin>
