--- a/pom.xml
+++ b/pom.xml
@@ -25,10 +25,31 @@
     <module>bindings/java/extensibility-bindings</module>
     <module>bindings/typescript/api-bindings</module>
   </modules>
+  <licenses>
+    <license>
+      <name>BSD-2-Clause</name>
+      <url>https://opensource.org/licenses/BSD-2-Clause</url>
+    </license>
+  </licenses>
+
+  <developers>
+    <developer>
+      <id>jmoroski</id>
+      <name>Jeff Moroski</name>
+      <organization>VMware, Inc.</organization>
+      <organizationUrl>http://www.vmware.com</organizationUrl>
+    </developer>
+  </developers>
+
+  <scm>
+    <connection>scm:git:https://github.com/vmware/vcd-api-schemas.git</connection>
+    <url>https://github.com/vmware/vcd-api-schemas</url>
+  </scm>
+
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java.version>1.8</java.version>
-    <vcd.api.tooling.version>0.9.0-SNAPSHOT</vcd.api.tooling.version>
+    <vcd.api.tooling.version>0.9.0</vcd.api.tooling.version>
     <cxf.version>3.1.11</cxf.version>
     <spring.version>4.3.13.RELEASE</spring.version>
     <swagger.version>1.5.13</swagger.version>
@@ -541,5 +562,65 @@
         <downloadJavadocs>true</downloadJavadocs>
       </properties>
     </profile>
+    <profile>
+      <id>release</id>
+        <build>
+          <plugins>
+            <!--
+             Maven Release Plugin
+             To release this project, follow the instructions in RELEASING.md
+            -->
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-release-plugin</artifactId>
+              <version>2.5.3</version>
+            </plugin>
+
+          <!--
+            Sign the components using GPG, so that they can be deployed to Sonatype
+          -->
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-gpg-plugin</artifactId>
+            <version>1.6</version>
+            <executions>
+              <execution>
+                <id>sign-artifacts</id>
+                <phase>verify</phase>
+                <goals>
+                  <goal>sign</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+
+          <!--
+           Nexus-specific deployment plugin
+          -->
+          <plugin>
+            <groupId>org.sonatype.plugins</groupId>
+            <artifactId>nexus-staging-maven-plugin</artifactId>
+            <version>1.6.7</version>
+            <extensions>true</extensions>
+            <configuration>
+              <serverId>ossrh</serverId>
+              <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+              <stagingProfileId>863e26d72b942f</stagingProfileId>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
   </profiles>
+
+  <distributionManagement>
+    <snapshotRepository>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+    </snapshotRepository>
+    <repository>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+    </repository>
+  </distributionManagement>
 </project>
