--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,11 @@
 language: java
 before_install:
-  - openssl aes-256-cbc -K $encrypted_2b712e08a69e_key -iv $encrypted_2b712e08a69e_iv -in build-resources/gpg_files.tar.enc -out build-resources/gpg_files.tar -d
-  - tar -f build-resources/gpg_files.tar -xO gpg-secret-keys | $GPG_EXECUTABLE --import
-  - tar -f build-resources/gpg_files.tar -xO gpg-ownertrust | $GPG_EXECUTABLE --import-ownertrust
   - mvn license:check-file-header -Dlicense.failOnNotUptodateHeader=true -Dlicense.failOnMissingHeader=true
 
 deploy:
   provider: script
   script: cd $TRAVIS_BUILD_DIR && bash build-resources/travis-release.sh
-#  skip_cleanup: true
-#  on:
-#    tags: true
-#    branch: master
+  skip_cleanup: true
+  on:
+    tags: true
+    branch: master
