--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,11 @@
 language: java
 before_install:
   - mvn license:check-file-header -Dlicense.failOnNotUptodateHeader=true -Dlicense.failOnMissingHeader=true
+
+deploy:
+  provider: script
+  script: cd $TRAVIS_BUILD_DIR && bash build-resources/travis-release.sh
+  skip_cleanup: true
+  on:
+    tags: true
+    branch: master
