--- a/bindings/java/api-bindings/pom.xml
+++ b/bindings/java/api-bindings/pom.xml
@@ -103,7 +103,7 @@
       <plugin>
         <artifactId>maven-javadoc-plugin</artifactId>
         <configuration>
-          <skip>true</skip>
+          <failOnError>false</failOnError>
         </configuration>
       </plugin>
       <plugin>
