[ui] Support for publishing to NPM
This switches the UI to NPM 6.x (currently the flavour of the month
for package management in UI) and adds publishing support in the
deploy phase.

The flow is:
  mvn deploy
  |_ release profile
    |_ frontend plugin
      |_ npm run mvn:deploy
        |_ .npmrc.dist used as .npmrc for npm publish target/dist
          |_ .npmrc checked for registry
            |_ NPM_API_TOKEN env var used for auth token

This currently is set to dry run only.  Once proven to work, we
will remove the dry run option.

Testing done: local mvn clean install deploy
Signed-off-by: David Byard <dbyard@vmware.com>

--- a/bindings/typescript/api-bindings/package.json
+++ b/bindings/typescript/api-bindings/package.json
@@ -9,9 +9,10 @@
     "clean": "rimraf target/build && rimraf target/dist",
     "tsc": "tsc",
     "copy-metadata": "cpy package.dist.json target/dist --rename=package.json",
-    "build": "yarn run clean && yarn run tsc && ncp build/ dist/ && yarn run copy-metadata",
-    "mvn:compile": "yarn run tsc",
-    "mvn:prepare-package": "ncp target/build/ target/dist/ && yarn run copy-metadata"
+    "build": "npm run clean && npm run tsc && ncp build/ dist/ && npm run copy-metadata",
+    "mvn:compile": "npm run tsc",
+    "mvn:prepare-package": "ncp target/build/ target/dist/ && npm run copy-metadata",
+    "mvn:deploy": "cpy .npmrc.dist .npmrc && npm publish target/dist --access public --dry-run && rimraf .npmrc"
   },
   "devDependencies": {
     "cpy-cli": "^2.0.0",
