--- a/pom.xml
+++ b/pom.xml
@@ -262,43 +262,43 @@
           <version>1.6</version>
           <executions>
             <execution>
-              <id>install node and yarn</id>
+              <id>install node and npm</id>
               <goals>
-                <goal>install-node-and-yarn</goal>
+                <goal>install-node-and-npm</goal>
               </goals>
               <phase>validate</phase>
             </execution>
             <execution>
-              <id>yarn install</id>
+              <id>npm install</id>
               <goals>
-                <goal>yarn</goal>
+                <goal>npm</goal>
               </goals>
               <phase>initialize</phase>
             </execution>
             <execution>
               <id>transpile bindings</id>
               <goals>
-                <goal>yarn</goal>
+                <goal>npm</goal>
               </goals>
               <phase>compile</phase>
               <configuration>
-                <arguments>mvn:compile</arguments>
+                <arguments>run mvn:compile</arguments>
               </configuration>
             </execution>
             <execution>
               <id>create NPM package</id>
               <goals>
-                <goal>yarn</goal>
+                <goal>npm</goal>
               </goals>
               <phase>prepare-package</phase>
               <configuration>
-                <arguments>mvn:prepare-package</arguments>
+                <arguments>run mvn:prepare-package</arguments>
               </configuration>
             </execution>
           </executions>
           <configuration>
-            <nodeVersion>v8.9.1</nodeVersion>
-            <yarnVersion>v1.3.2</yarnVersion>
+            <nodeVersion>v10.11.0</nodeVersion>
+            <npmVersion>6.4.1</npmVersion>
           </configuration>
         </plugin>
         <plugin>
@@ -609,6 +609,27 @@
               <stagingProfileId>863e26d72b942f</stagingProfileId>
             </configuration>
           </plugin>
+          
+          <!--
+           NPM deployment
+          -->
+          <plugin>
+            <groupId>com.github.eirslett</groupId>
+            <artifactId>frontend-maven-plugin</artifactId>
+            <version>1.6</version>
+            <executions>
+              <execution>
+                <id>npm deploy</id>
+                <goals>
+                  <goal>npm</goal>
+                </goals>
+                <phase>deploy</phase>
+                <configuration>
+                  <arguments>run mvn:deploy</arguments>
+                </configuration>
+             </execution>
+           </executions>
+         </plugin>
         </plugins>
       </build>
     </profile>
