Added files to push the end-delieverable for python to PyPi
Shell script publish.sh can be used to push the end-deliverable to pypi.

Testing Done: Manually executed and inspected the package by un-archieving it. It bundles both xsd based and open-api python generated types correctly.

Location would be /vcd-api-schemas-type-9.1.2.dev1/vcloud/

Signed-off-by: Rajesh Kumar <rajeshk@vmware.com>

--- a/bindings/python/api-bindings/pom.xml
+++ b/bindings/python/api-bindings/pom.xml
@@ -94,7 +94,7 @@
       <plugin>
         <groupId>io.swagger</groupId>
         <artifactId>swagger-codegen-maven-plugin</artifactId>
-        <version>2.3.1</version>
+        <version>2.2.3</version>
         <executions>
           <execution>
             <phase>generate-sources</phase>
@@ -110,10 +110,11 @@
           <generateApis>false</generateApis>
           <generateModelTests>false</generateModelTests>
           <generateModelDocumentation>false</generateModelDocumentation>
-          <generateSupportingFiles>false</generateSupportingFiles>
-          <modelPackage>vcloud.rest.openapi.model</modelPackage>
+          <generateSupportingFiles>true</generateSupportingFiles>
+          <!-- <modelPackage>vcloud.rest.openapi</modelPackage> -->
           <configOptions>
             <modelPropertyNaming>original</modelPropertyNaming>
+            <packageName>vcloud.rest.openapi</packageName>
           </configOptions>
         </configuration>
       </plugin>
