--- a/schemas/openapi/src/main/resources/schemas/common/entity.yaml
+++ b/schemas/openapi/src/main/resources/schemas/common/entity.yaml
@@ -1,6 +1,6 @@
 # *************************************************************************
 # * api-extension-template-vcloud-director
-# * Copyright 2017-2018 VMware, Inc.  All rights reserved. *
+# * Copyright 2017-2020 VMware, Inc.  All rights reserved. *
 # * SPDX-License-Identifier: BSD-2-Clause
 # *************************************************************************
 swagger: "2.0"
@@ -12,6 +12,20 @@ info:
 
 
 definitions:
+
+  EntityReferences:
+    description: |
+      A list of entity references.
+    allOf:
+      - $ref: '#/definitions/Page'
+      - type: object
+        properties:
+          values:
+            type: array
+            description: The current page of entity references.
+            items:
+              $ref: '#/definitions/EntityReference'
+
   EntityReference:
     description: |
       Entity reference used to describe VCD entities
@@ -21,3 +35,6 @@ definitions:
         type: string
       id:
         type: string
+
+  Page:
+    $ref: "./common/query.yaml#/definitions/Page"
