Add the v10.0 branch to the CI pipeline.
Signed-off-by: Jeff Moroski <jmoroski@vmware.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: vcd-api-schemas CI
 
 on:
   push:
-    branches: [master]
+    branches: [master, v10.0]
   pull_request:
-    branches: [master]
+    branches: [master, v10.0]
 
 jobs:
   build:
