--- a/bindings/python/api-bindings/pom.xml
+++ b/bindings/python/api-bindings/pom.xml
@@ -104,7 +104,7 @@
           </execution>
         </executions>
         <configuration>
-          <output>${project.build.directory}/generated-python-bindings</output>
+	  <output>${project.build.directory}/generated-python-bindings</output>
           <inputSpec>${project.build.directory}/openapi-schemas/schemas/vcloud-openapi-schemas.yaml</inputSpec>
           <language>python</language>
           <generateApis>false</generateApis>
@@ -116,6 +116,48 @@
             <modelPropertyNaming>original</modelPropertyNaming>
             <packageName>vcloud.rest.openapi</packageName>
           </configOptions>
+        </configuration>
+       </plugin>
+       
+       <plugin>
+            <artifactId>maven-resources-plugin</artifactId>
+            <version>3.1.0</version>
+            <executions>
+                <execution>
+                    <id>copy-resource-one</id>
+                    <phase>instal-testl</phase>
+                    <goals>
+                        <goal>1-copy-resources-1</goal>
+                    </goals>
+                    <configuration>
+			    <outputDirectory>${project.build.directory}/../../../../build-resources/</outputDirectory>
+                        <resources>
+                            <resource>
+                                <directory>${project.build.directory}/generated-python-bindings</directory>
+                            </resource>
+                        </resources>
+                    </configuration>
+                </execution>
+           </executions>
+       </plugin>
+       <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <executions>
+            <execution>
+                <id>python-build</id>
+                <phase>install</phase>
+                <goals>
+                    <goal>exec</goal>
+                </goals>
+            </execution>
+        </executions>
+        <configuration>
+           <executable>python</executable>
+           <workingDirectory>${project.build.directory}/generated-python-bindings</workingDirectory>
+           <arguments>
+		   <argument>${project.build.directory}/../copy_types_generated_files.py</argument>
+           </arguments>    
         </configuration>
       </plugin>
     </plugins>
