--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Configure gpg
       run: |
         gpg --quiet --batch --yes --decrypt --passphrase="$ENCRYPTION_PASSPHRASE" --output gpg_files.tar ./build-resources/gpg_files.tar.gpg
@@ -15,14 +15,15 @@ jobs:
       env:
         ENCRYPTION_PASSPHRASE: ${{secrets.ENCRYPTION_PASSPHRASE}}
     - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@v3
       with:
-        java-version: 1.8
+        java-version: 8.0.322+6
+        distribution: zulu
         server-id: ossrh
         server-username: SONATYPE_USERNAME
         server-password: SONATYPE_PASSWORD
     - name: Publish packages
-      run: mvn -Prelease --settings build-resources/travis-settings.xml deploy
+      run: mvn -Prelease --settings build-resources/release-settings.xml deploy
       env:
         SONATYPE_USERNAME: ${{secrets.SONATYPE_USERNAME}}
         SONATYPE_PASSWORD: ${{secrets.SONATYPE_PASSWORD}}
