--- a/bindings/typescript/api-bindings/pom.xml
+++ b/bindings/typescript/api-bindings/pom.xml
@@ -39,6 +39,10 @@
       <plugin>
         <groupId>com.github.eirslett</groupId>
         <artifactId>frontend-maven-plugin</artifactId>
+        <configuration>
+          <nodeVersion>v18.3.0</nodeVersion>
+          <npmVersion>8.9.0</npmVersion>
+        </configuration>
       </plugin>
       <plugin>
         <artifactId>maven-dependency-plugin</artifactId>
@@ -101,6 +105,17 @@
             </goals>
             <configuration>
               <executable>${basedir}/scripts/generate-models.sh</executable>
+              <arguments>${project.build.directory}/generated-typescript-bindings</arguments>
+            </configuration>
+          </execution>
+          <execution>
+            <id>Clean TypeScript</id>
+            <phase>process-sources</phase>
+            <goals>
+              <goal>exec</goal>
+            </goals>
+            <configuration>
+              <executable>${basedir}/scripts/patch-jaxbelement.sh</executable>
               <arguments>${project.build.directory}/generated-typescript-bindings</arguments>
             </configuration>
           </execution>
