fix incorrect relative references in openapi spec
Signed-off-by: Tom Hörberg <tom.hoerberg@plusserver.com>

--- a/schemas/openapi/src/main/resources/schemas/extensions/extensions.yaml
+++ b/schemas/openapi/src/main/resources/schemas/extensions/extensions.yaml
@@ -360,4 +360,4 @@ definitions:
       - size
 
   EntityReference:
-    $ref: "./common/entity.yaml#/definitions/EntityReference"
+    $ref: "../common/entity.yaml#/definitions/EntityReference"
