--- a/bindings/typescript/api-bindings/pom.xml
+++ b/bindings/typescript/api-bindings/pom.xml
@@ -39,6 +39,10 @@
       <plugin>
         <groupId>com.github.eirslett</groupId>
         <artifactId>frontend-maven-plugin</artifactId>
+        <configuration>
+          <nodeVersion>v18.3.0</nodeVersion>
+          <npmVersion>8.9.0</npmVersion>
+        </configuration>
       </plugin>
       <plugin>
         <artifactId>maven-dependency-plugin</artifactId>
